# tasks_api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: config.py  main.py
app/api/: schemas.py  version.py
app/core/: deps.py  security.py
app/infrastructure/: memory_user_repo.py
tests/: test_version.py
